scripts/nullaway/annotator/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../annotator/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Parking.java:33: error: [NullAway] method returns @Nullable, but superclass method com.andreev.parking.model.IParking.getPlacePool() returns @NonNull
	public ParkingPlacePool getPlacePool() {
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:69: error: [NullAway] enhanced-for expression parkings is @Nullable
		for (IParking parking : parkings) {
		                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:100: error: [NullAway] dereferenced expression place is @Nullable
		place.using(getParkTimeMillis());
		     ^
    (see http://t.uber.com/nullaway )
3 errors
